// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies theme and style props 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a component passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
    ]
  }
>
  <Text>
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a string passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
        },
        undefined,
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;
